kubernetes/clusters/home/apps/sentio-systems/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentio-systems
  labels:
    app.kubernetes.io/name: sentio-systems
